# gameengine3

./: .gitmodules  CMakeLists.txt  LICENSE  imgui.ini  run.bat  run.sh
assets/python_src/: load_obj.py
src/: game_object.hpp  game_object_usage_example.cpp  main.cpp  orbitcamera.h
